--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,11 @@ dependencies {
     //compile 'org.apache.httpcomponents:httpcore:4.4.1'
     compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
+
     compile 'com.github.blackfizz:eazegraph:1.2.2@aar'
     compile 'com.nineoldandroids:library:2.4.0'
+
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
 
 
 }
